# pub-python-repo

./: .example.env  .gitignore  Makefile  README.md  _check.py  _tmp_patch.py  app.db  pyproject.toml
app/: main.py
app/api/: auth.py  health.py  jobs.py  results.py
app/core/: config.py  errors.py  logging_config.py  middleware.py  security.py  security_middleware.py
app/db/: init_db.py  models.py  session.py
app/results/: base.py  factory.py  parquet_azure.py  parquet_local.py
app/runners/: airflow.py  base.py  databricks.py  factory.py  local.py
app/schemas/: errors.py  jobs.py  results.py
databricks/docs/: empirical_simulation_methods.md  multifractal_method.md
databricks/jobs/: mc_vs_actual_test.ipynb  monte_carlo_simulation.ipynb  options_data_pipeline.ipynb  scalability_test.ipynb  simple_job_results.ipynb  simple_job_results.py
databricks/lib/: entrypoint.py  generate.py  params.py  paths.py  schema.py  sinks.py
databricks/src/: yfinance_pipeline.ipynb
databricks/src/config/: __init__.py  settings.py
databricks/src/tests/: __init__.py  run_tests.ipynb  test_delta_helpers.py  test_simulation.py  test_yfinance_transforms.py
databricks/src/transforms/: __init__.py  simulation.py  (+1 more)
infra/nginx/: nginx.conf
migrations/: README  env.py
migrations/versions/: 8bec6af95310_init_schema.py
tests/: conftest.py  test_health.py  test_job_lifecycle.py  test_jobs.py  test_results_flow.py
ui/: api_client.py  streamlit_app.py
ui/.streamlit/: config.toml
ui/pages/: 1_Submit.py  2_Jobs.py  3_Results.py  4_Compare.py
worker/: worker.py
(+4 files in other folders)
